--- a/SM Clone.html
+++ b/SM Clone.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
- <div class="sign-in">
+ <div class="signin-box">
   <h1>Sign In</h1>
   <form action="">
    <label for=""></label>
