--- a/SM Clone.html
+++ b/SM Clone.html
@@ -5,8 +5,10 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>SM Clone</title>
+ <title>SM Clone Sign In</title>
+ <link rel="stylesheet" href="SM Sign in.css">
 </head>
+l
 
 <body>
  <div class="signin-box">
@@ -16,7 +18,7 @@
    <input type="text" placeholder="Sign in with Apple">
    <input type="text" placeholder="Sign in with Google">
    <input type="text" placeholder="Phone, email, or user name">
-   <input type="button" placeholder="Next" value="Next">
+   <button type="submit" class="btn">Next</button>
    <input type="text" placeholder="Forgot Password?">
   </form>
   <p>Don't have an account? <a href="#">Sign up</a></p>
