--- a/SM Home.html
+++ b/SM Home.html
@@ -17,6 +17,54 @@
    <span class="material-icons">home</span>
    <h2>Home</h2>
   </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">search
+   </span>
+   <h2>Search</h2>
+  </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">
+    notifications
+   </span>
+   <h2>Notifications</h2>
+  </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">email
+   </span>
+   <h2>Messages</h2>
+  </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">
+    bookmark
+   </span>
+   <h2>Bookmarks</h2>
+  </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">
+    list
+   </span>
+   <h2>Lists</h2>
+  </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">
+    person
+   </span>
+   <h2>Profile</h2>
+  </div>
+
+  <div class="sidebarOption">
+   <span class="material-icons">
+    more
+   </span>
+   <h2>More</h2>
+  </div>
+  <button class="sidebar_send">Send</button>
  </div>
  <!--sidebar ends-->
 
