--- a/SM Home.html
+++ b/SM Home.html
@@ -68,6 +68,27 @@
  </div>
  <!--sidebar ends-->
 
+ <!--feed start-->
+ <div class="feed">
+  <div class="feed_header">
+   <h2>Home</h2>
+  </div>
+
+  <!--tweetbox starts-->
+  <div class="tweetbox">
+   <form>
+    <div class="tweetbox_input">
+     <img src="Clone Photo.png" alt="My Photo">
+     <input type="text" placeholder="What's happening?">
+    </div>
+    <button class="tweetbox_tweetbutton">Send</button>
+   </form>
+  </div>
+  <!--tweetbox ends-->
+ </div>
+
+ <!--feed end-->
+
 </body>
 
 </html>
