--- a/SM Clone.html
+++ b/SM Clone.html
@@ -11,18 +11,21 @@
 l
 
 <body>
+ <div id="error"></div>
+
  <div class="signin-box">
   <h1>Sign In</h1>
-  <form action="">
+  <form id="form" action="" method="get">
    <label for=""></label>
-   <input type="text" placeholder="Sign in with Apple">
-   <input type="text" placeholder="Sign in with Google">
-   <input type="text" placeholder="Phone, email, or user name">
+   <input id="apple" type="text" placeholder="Sign up with Apple">
+   <input id="google" type="text" placeholder="Sign up with Google">
+   <input id="other" type="text" placeholder="Phone, email, or user name">
    <button type="submit" class="btn">Next</button>
    <input type="text" placeholder="Forgot Password?">
   </form>
   <p>Don't have an account? <a href="#">Sign up</a></p>
  </div>
+ <script src="SM Clone.js"></script>
 </body>
 
 </html>
