--- a/SM Log-in.html
+++ b/SM Log-in.html
@@ -10,16 +10,19 @@
 </head>
 
 <body>
+  <div id="error"></div>
   <div class="login-box">
-    <h1>Join Today</h1>
-    <form action="">
+    <h1>Log In</h1>
+    <form id="form" action="">
       <label for=""></label>
-      <input type="text" placeholder="Sign up with Apple">
-      <input type="text" placeholder="Sign up with Google">
-      <input type="text" placeholder="Phone, email, or user name">
+      <input id="apple" type="text" placeholder="Log-in with Apple">
+      <input id="google" type="text" placeholder="Log-in with Google">
+      <input id="others" type="text" placeholder="Phone, email, or user name">
+      <button type="submit" class="btn">Next</button>
 
       <p>By signing up, you agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>, including
-        <a href="#">Cookie Use.</a></p>
+        <a href="#">Cookie Use.</a>
+      </p>
       <p>Have an account already? <a href="#">Log in</a></p>
 
 </body>
