--- a/SM Dash.html
+++ b/SM Dash.html
@@ -2,38 +2,40 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>SM Dash</title>
- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
- <link rel="stylesheet" href="SM Dash.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SM Dash</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="SM Dash.css">
 
 </head>
 
 <body>
- <!--sidebar start-->
- <div class="sidebarOption">
-  <span class="material-icons">
-   tag
-  </span>
-  <h2>Explore</h2>
- </div>
+  <!--sidebar start-->
+  <nav>
+    <div class="sidebarOption">
+      <span class="material-icons">
+        tag
+      </span>
+      <h2>Explore</h2>
+    </div>
 
- <div class="sidebarOption">
-  <span class="material-icons">settings</span>
-  <h2>Settings</h2>
- </div>
- <!--sidebar end-->
+    <div class="sidebarOption">
+      <span class="material-icons">settings</span>
+      <h2>Settings</h2>
+    </div>
+  </nav>
+  <!--sidebar end-->
 
 
- <!--feed start-->
- <div class="feed">
-  <div class="feed_input">
-   <span class="material-icons widgets_searchIcon">search</span>
-   <input type="text" placeholder="Search">
-  </div>
-  <!--feed end-->
+  <!--feed start-->
+  <div class="feed">
+    <div class="feed_input">
+      <span class="material-icons widgets_searchIcon">search</span>
+      <input type="text" placeholder="Search">
+    </div>
+    <!--feed end-->
 
 </body>
 
